// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parseCodeBlockMeta parses mixed values 1`] = `
{
  "lineClassNames": {
    "0": [
      "theme-code-block-highlighted-line",
    ],
  },
  "options": {
    "a": "double'quote",
    "b": "single"quote",
    "c": "raw",
    "d": true,
    "e": false,
    "f": 1,
    "g": 0.5,
  },
}
`;

exports[`parseCodeBlockMeta parses range and options 1`] = `
{
  "lineClassNames": {
    "0": [
      "theme-code-block-highlighted-line",
    ],
    "1": [
      "theme-code-block-highlighted-line",
    ],
    "2": [
      "theme-code-block-highlighted-line",
    ],
  },
  "options": {
    "label": "JavaScript",
    "title": "index.js",
  },
}
`;

exports[`parseCodeBlockMeta parses range and options end 1`] = `
{
  "lineClassNames": {
    "0": [
      "theme-code-block-highlighted-line",
    ],
    "1": [
      "theme-code-block-highlighted-line",
    ],
    "2": [
      "theme-code-block-highlighted-line",
    ],
  },
  "options": {
    "label": "JavaScript",
    "title": "index.js",
  },
}
`;

exports[`parseCodeBlockMeta parses range and options middle 1`] = `
{
  "lineClassNames": {
    "0": [
      "theme-code-block-highlighted-line",
    ],
    "1": [
      "theme-code-block-highlighted-line",
    ],
    "2": [
      "theme-code-block-highlighted-line",
    ],
  },
  "options": {
    "label": "JavaScript",
    "title": "index.js",
  },
}
`;

exports[`parseCodeBlockMeta parses range and options multiple 1`] = `
{
  "lineClassNames": {
    "0": [
      "theme-code-block-highlighted-line",
    ],
    "1": [
      "theme-code-block-highlighted-line",
    ],
    "2": [
      "theme-code-block-highlighted-line",
    ],
    "3": [
      "theme-code-block-highlighted-line",
    ],
  },
  "options": {
    "label": "JavaScript",
    "title": "index.js",
  },
}
`;

exports[`parseCodeBlockMeta parses range only 1`] = `
{
  "lineClassNames": {
    "0": [
      "theme-code-block-highlighted-line",
    ],
    "1": [
      "theme-code-block-highlighted-line",
    ],
    "2": [
      "theme-code-block-highlighted-line",
    ],
  },
  "options": {},
}
`;

exports[`parseLines does not parse content with metastring 1`] = `
{
  "code": "aaaaa
nnnnn",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines does not parse content with metastring 2`] = `
{
  "code": "aaaaa
bbbbb",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines does not parse content with metastring 3`] = `
{
  "code": "aaaaa
bbbbb",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines does not parse content with no language 1`] = `
{
  "code": "// highlight-next-line
aaaaa
bbbbb",
  "meta": {
    "lineClassNames": {},
    "options": {},
  },
}
`;

exports[`parseLines handles one line with multiple class names 1`] = `
{
  "code": "
highlighted and collapsed
highlighted and collapsed
highlighted and collapsed
Only highlighted
Only collapsed
highlighted and collapsed
highlighted and collapsed
Only collapsed
highlighted and collapsed",
  "meta": {
    "lineClassNames": {
      "1": [
        "highlight",
        "collapse",
      ],
      "2": [
        "highlight",
        "collapse",
      ],
      "3": [
        "highlight",
        "collapse",
      ],
      "4": [
        "highlight",
      ],
      "5": [
        "collapse",
      ],
      "6": [
        "highlight",
        "collapse",
      ],
      "7": [
        "highlight",
        "collapse",
      ],
      "8": [
        "collapse",
      ],
      "9": [
        "highlight",
        "collapse",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines handles one line with multiple class names 2`] = `
{
  "code": "line
line",
  "meta": {
    "lineClassNames": {
      "0": [
        "a",
        "b",
        "c",
        "d",
      ],
      "1": [
        "b",
        "d",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines parses multiple types of magic comments 1`] = `
{
  "code": "
highlighted
collapsed
collapsed
collapsed",
  "meta": {
    "lineClassNames": {
      "1": [
        "highlight",
      ],
      "2": [
        "collapse",
      ],
      "3": [
        "collapse",
      ],
      "4": [
        "collapse",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines removes lines correctly 1`] = `
{
  "code": "aaaaa
bbbbb",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines removes lines correctly 2`] = `
{
  "code": "aaaaa
bbbbb",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines removes lines correctly 3`] = `
{
  "code": "aaaaa
bbbbbbb
bbbbb",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
      "1": [
        "theme-code-block-highlighted-line",
      ],
      "2": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines respects language: html 1`] = `
{
  "code": "aaaa
{/* highlight-next-line */}
bbbbb
dddd",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
      "3": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines respects language: js 1`] = `
{
  "code": "# highlight-next-line
aaaaa
bbbbb",
  "meta": {
    "lineClassNames": {},
    "options": {},
  },
}
`;

exports[`parseLines respects language: jsx 1`] = `
{
  "code": "aaaa
bbbbb
<!-- highlight-next-line -->
dddd",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
      "1": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines respects language: md 1`] = `
{
  "code": "---
aaa: boo
---

aaaa

<div>
foo
</div>

bbbbb
dddd

\`\`\`js
// highlight-next-line
console.log("preserved");
\`\`\`",
  "meta": {
    "lineClassNames": {
      "1": [
        "theme-code-block-highlighted-line",
      ],
      "11": [
        "theme-code-block-highlighted-line",
      ],
      "7": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines respects language: none 1`] = `
{
  "code": "aaaa
bbbbb
ccccc
dddd",
  "meta": {
    "lineClassNames": {
      "0": [
        "theme-code-block-highlighted-line",
      ],
      "1": [
        "theme-code-block-highlighted-line",
      ],
      "2": [
        "theme-code-block-highlighted-line",
      ],
      "3": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;

exports[`parseLines respects language: py 1`] = `
{
  "code": "/* highlight-next-line */
aaaaa
bbbbb",
  "meta": {
    "lineClassNames": {},
    "options": {},
  },
}
`;

exports[`parseLines respects language: py 2`] = `
{
  "code": "// highlight-next-line
aaaa
/* highlight-next-line */
bbbbb
ccccc
<!-- highlight-next-line -->
dddd",
  "meta": {
    "lineClassNames": {
      "4": [
        "theme-code-block-highlighted-line",
      ],
    },
    "options": {},
  },
}
`;
